# torch-influence

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  release-please.yml
docs/: conf.py  index.rst
examples/: analyze_dogfish.py
tests/: test_base.py  test_modules_lin.py  test_modules_log.py
torch_influence/: __init__.py  base.py  modules.py
