[metadata]
name = torch_influence
version = attr: torch_influence.__version__
description = "A PyTorch implementation of influence functions."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alstonlo/torch-influence
author = Alston Lo, Juhan Bae
author_email = alston.lo@mail.utoronto.ca
license = Apache-2.0
license_file = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = machine-learning, deep-learning, influence-functions

[options]
packages =
    torch_influence
install_requires =
    numpy>=1.8.4
    scipy>=1.3.3
    torch>=1.6.0
python_requires = >=3.7.12
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    isort>=5.10.1
    matplotlib>=3.5.2
    pylint>=2.14.3
    pytest>=7.0.0
    scikit-learn>=0.19.2
    torchvision>=0.7.0
    tqdm>=4.64.0
docs =
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
